<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/setup_profile"
    android:layout_height="match_parent"
    tools:context=".setup_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200mdp"
            android:background="@color/nevi_blue">

            <TextView
                android:id="@+id/skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/_10mdp"
                android:layout_marginRight="@dimen/_10mdp"
                android:textSize="@dimen/_15font_mdp"
                android:textColor="@color/white"
                android:clickable="true"
                android:text="@string/skip"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="@dimen/_40mdp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/baloo"
                android:padding="@dimen/_30mdp"
                android:text="@string/personal_info"
                android:textColor="@color/white"
                android:textSize="@dimen/_30mdp" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_110mdp"
            android:layout_height="@dimen/_110mdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginRight="@dimen/_100mdp"
            android:layout_marginLeft="@dimen/_100mdp"
            android:layout_marginTop="-80dp"
            app:cardCornerRadius="@dimen/_75mdp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" >

            <ImageView
                android:id="@+id/Pprofile_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:background="@drawable/ic_add_user"
                android:scaleType="fitCenter"/>

        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/PprogressBar"
            style="?android:attr/progressBarStyle"
            android:paddingTop="@dimen/_10mdp"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_15mdp"
            android:paddingTop="@dimen/_20mdp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10mdp"
                android:hint="@string/full_name"
                android:clickable="false"
                android:tooltipText="Full Name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Pfull_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/account_ic"
                    android:drawablePadding="@dimen/_10mdp"
                    android:fontFamily="sans-serif"
                    android:inputType="text"
                    android:maxLength="18"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10mdp"
                android:hint="@string/phone_no.">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Pphone_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="@dimen/_14mdp"
                    android:fontFamily="sans-serif"
                    android:inputType="number"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10mdp"
                android:hint="@string/email_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/PemailID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/_10mdp"
                    android:fontFamily="sans-serif"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/Pupdate_detail_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_15mdp"
                android:background="@color/nevi_blue"
                android:elevation="@dimen/_20mdp"
                android:fontFamily="sans-serif"
                android:paddingLeft="@dimen/_10mdp"
                android:paddingRight="@dimen/_10mdp"
                android:text="@string/update_detail"
                android:textColor="@color/white"
                android:textStyle="bold"
                />

        </LinearLayout>



    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>