<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".post">

    <VideoView
        android:id="@+id/vv_post"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_350mdp"
        android:visibility="visible"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/iv_post"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_350mdp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_choosen_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5mdp"
        android:background="@drawable/custom_button"
        android:text="@string/add_image"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.688" />

    <EditText
        android:id="@+id/et_desc_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/nevi_blue"
        android:hint="@string/description"
        android:paddingStart="@dimen/_5mdp"
        android:paddingEnd="@dimen/_5mdp"
        android:textColorHint="@color/nevi_blue"
        android:textSize="@dimen/_15font_mdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.779" />

    <Button
        android:id="@+id/btn_upload_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5mdp"
        android:background="@drawable/custom_button"
        android:text="@string/upload"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />


    <EditText
        android:id="@+id/et_phoneNo_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/nevi_blue"
        android:hint="@string/phone_no."
        android:paddingStart="@dimen/_5mdp"
        android:paddingEnd="@dimen/_5mdp"
        android:textColorHint="@color/nevi_blue"
        android:textSize="@dimen/_15font_mdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.861" />

    <ProgressBar
        android:id="@+id/pb_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.288" />

</androidx.constraintlayout.widget.ConstraintLayout>