<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="@dimen/_3mdp"
    app:cardCornerRadius="@dimen/_5mdp"
    app:cardBackgroundColor="@color/white"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_2mdp">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_40mdp"
                android:layout_height="@dimen/_40mdp"
                android:layout_gravity="center_vertical"
                app:cardPreventCornerOverlap="false"
                app:cardCornerRadius="@dimen/_20mdp">

                <ImageView
                    android:id="@+id/ivprofile_item"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_add_user"
                    android:clickable="true"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:hint="@string/name"
                    android:textSize="@dimen/_10font_mdp"
                    android:paddingStart="@dimen/_5mdp"
                    />

                <TextView
                    android:id="@+id/tv_time_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/nevi_blue"
                    android:hint="@string/time"
                    android:textSize="@dimen/_10font_mdp"
                    android:paddingStart="@dimen/_5mdp"
                    />

            </LinearLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_post_item"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250mdp"
                android:scaleType="centerCrop"
                android:visibility="visible"
                tools:ignore="MissingConstraints" />




        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/likebutton_posts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_dislike"
                android:background="@android:color/transparent"
                android:padding="@dimen/_5mdp"
                android:layout_marginLeft="@dimen/_10mdp"/>

            <ImageButton
                android:id="@+id/commentbutton_posts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_comment"
                android:background="@android:color/transparent"
                android:padding="@dimen/_5mdp"
                android:layout_marginLeft="@dimen/_10mdp"/>

            <ImageButton
                android:id="@+id/morebutton_posts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_more_horiz_24"
                android:background="@android:color/transparent"
                android:padding="@dimen/_5mdp"
                android:layout_marginLeft="@dimen/_10mdp"/>


        </LinearLayout>

        <TextView
            android:id="@+id/tv_likes_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/likes"
            android:textSize="@dimen/_10font_mdp"
            android:paddingStart="@dimen/_5mdp"
            />

        <TextView
            android:id="@+id/tv_pNo_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_10font_mdp"
            android:paddingStart="@dimen/_5mdp"
            />

        <TextView
            android:id="@+id/tv_desc_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_10font_mdp"
            android:paddingStart="@dimen/_5mdp"
            />


    </LinearLayout>


</androidx.cardview.widget.CardView>